--- a/public/index.html
+++ b/public/index.html
@@ -24,13 +24,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <!-- <link
-      href="
-    https://cdn.jsdelivr.net/npm/bootswatch@5.2.3/dist/materia/bootstrap.min.css
-    "
-      rel="stylesheet"
-    /> -->
 
+    <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.2.3/dist/materia/bootstrap.min.css
+" rel="stylesheet">
+
+
+   
     <title>React App</title>
   </head>
   <body>
@@ -48,3 +47,4 @@
     -->
   </body>
 </html>
+
